--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -3,6 +3,9 @@ name: Bump version - wazuh-packages
 on:
   workflow_dispatch:
     inputs:
+      base_branch:
+        description: 'Base branch to create the PR'
+        required: true
       version:
         description: 'Version to bump to'
         required: true
@@ -10,11 +13,8 @@ on:
         description: 'Revision to bump to. Defalut: 1'
         required: false
       date:
-        description: 'Date to bump to. Default: today'
+        description: 'Date to bump to. Format: m-d-Y. Default: today'
         required: false
-
-env:
-  BASE_BRANCH: ${{ github.base_ref }}
 
 jobs:
   bump-version:
@@ -23,12 +23,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.inputs.base_branch }}
 
       - uses: peterjgrainger/action-create-branch@v2.2.0
         with:
           branch: bump-version-${{ github.event.inputs.version }}
-          sha: ${{ github.head_ref }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -67,8 +66,9 @@ jobs:
 
       - name: "Create pull request"
         run: |
-            gh pr create -B "${{ github.head_ref }}" -H "bump-version-${{ github.event.inputs.version }}" \
-            --title 'Bump branch ${{ env.BASE_BRANCH }} to version ${{ github.event.inputs.version }}' \
-            --body "Pull request to bump branch ${{ github.head_ref }} to version ${{ github.event.inputs.version }}.\nCreated by GitHub Action `Bump version - wazuh-packages`"
+            gh pr create -B "${{ github.event.inputs.base_branch }}" -H "bump-version-${{ github.event.inputs.version }}" \
+            --title 'Update branch ${{ github.event.inputs.base_branch }} to version ${{ github.event.inputs.version }}' \
+            --body 'Pull request to bump branch ${{ github.event.inputs.base_branch }} to version ${{ github.event.inputs.version }}.'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
