--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -7,10 +7,10 @@ on:
         description: 'Base branch to create the PR'
         required: true
       version:
-        description: 'Version to bump to'
+        description: 'Version to bump to. Format: x.x.x.'
         required: true
       revision:
-        description: 'Revision to bump to. Defalut: 1'
+        description: 'Revision to bump to. Default: 1'
         required: false
       date:
         description: 'Date to bump to. Format: m-d-Y. Default: today'
@@ -18,7 +18,7 @@ on:
 
 jobs:
   bump-version:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
         with:
@@ -39,7 +39,23 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: bump-version-${{ github.event.inputs.version }}
-          
+
+      - name: Import bot's GPG key for signing commits
+        id: import-gpg
+        uses: crazy-max/ghaction-import-gpg@v5
+        with:
+          gpg_private_key: ${{ secrets.WAZUHCI_GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.WAZUHCI_GPG_PASSWORD }}
+          git_config_global: true
+          git_user_signingkey: true
+          git_commit_gpgsign: true
+
+      - name: Check imported keys
+        run: |
+          gpg --list-secret-keys --keyid-format LONG
+          gpg --list-keys --keyid-format LONG
+        shell: bash
+
       - name: Set execution parameters
         run: |
           if [ -n "${{ github.event.inputs.version }}" ]; then
@@ -60,12 +76,19 @@ jobs:
 
       - name: "Commit changes and push"
         run: |
-            git config --global user.name "wazuhci"
-            git config --global user.email "wazuhci@wazuh.com"
-            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+            echo use-agent >> ~/.gnupg/gpg.conf
+            echo pinentry-mode loopback >> ~/.gnupg/gpg.conf
+            echo allow-loopback-pinentry >> ~/.gnupg/gpg-agent.conf
+            echo "RELOADAGENT" | gpg-connect-agent
             git add .
             git commit -m "Bump version to ${{ github.event.inputs.version }}"
             git push origin bump-version-${{ github.event.inputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GIT_AUTHOR_NAME: ${{ steps.import-gpg.outputs.name }}
+          GIT_AUTHOR_EMAIL: ${{ steps.import-gpg.outputs.email }}
+          GIT_COMMITTER_NAME: ${{ steps.import-gpg.outputs.name }}
+          GIT_COMMITTER_EMAIL: ${{ steps.import-gpg.outputs.email }}
         shell: bash
 
       - name: "Create pull request"
