--- a/debs/SPECS/dns-overwatch/debian/rules
+++ b/debs/SPECS/dns-overwatch/debian/rules
@@ -16,10 +16,10 @@ export DH_VERBOSE=1
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-export TARGET_DIR=${CURDIR}/debian/wazuh-agent
+export TARGET_DIR=${CURDIR}/debian/dns-overwatch
 
 # Package build options
-export INSTALLATION_DIR="/var/ossec"
+export INSTALLATION_DIR="/var/overwatch"
 export INSTALLATION_SCRIPTS_DIR="${INSTALLATION_DIR}/packages_files/agent_installation_scripts"
 export JOBS="5"
 export DEBUG_ENABLED="no"
@@ -64,12 +64,12 @@ override_dh_install:
 	mkdir -p ${TARGET_DIR}/etc/init.d/
 	sed -i "s:WAZUH_HOME_TMP:${INSTALLATION_DIR}:g" src/init/templates/ossec-hids-debian.init
 
-	cp src/init/templates/ossec-hids-debian.init ${TARGET_DIR}/etc/init.d/wazuh-agent
+	cp src/init/templates/ossec-hids-debian.init ${TARGET_DIR}/etc/init.d/dns-overwatch
 
 	# Copying systemd file
 	mkdir -p ${TARGET_DIR}/usr/lib/systemd/system/
-	sed -i "s:WAZUH_HOME_TMP:${INSTALLATION_DIR}:g" src/init/templates/wazuh-agent.service
-	install -m 0644 src/init/templates/wazuh-agent.service ${TARGET_DIR}/usr/lib/systemd/system/
+	sed -i "s:WAZUH_HOME_TMP:${INSTALLATION_DIR}:g" src/init/templates/dns-overwatch.service
+	install -m 0644 src/init/templates/dns-overwatch.service ${TARGET_DIR}/usr/lib/systemd/system/
 
 	# Generating permission restoration file for postinstall
 	mkdir -p ${TARGET_DIR}$(INSTALLATION_SCRIPTS_DIR)
@@ -146,8 +146,8 @@ override_dh_install:
 
 	# Copying systemd file
 	mkdir -p ${TARGET_DIR}/etc/systemd/system/
-	sed -i "s:WAZUH_HOME_TMP:${INSTALLATION_DIR}:g" src/init/templates/wazuh-agent.service
-	cp src/init/templates/wazuh-agent.service ${TARGET_DIR}/etc/systemd/system/
+	sed -i "s:WAZUH_HOME_TMP:${INSTALLATION_DIR}:g" src/init/templates/dns-overwatch.service
+	cp src/init/templates/dns-overwatch.service ${TARGET_DIR}/etc/systemd/system/
 
 override_dh_auto_clean:
 	$(MAKE) -C src clean
