Added umask to wazuh-indexer.service

--- a/stack/indexer/base/files/usr/lib/systemd/system/wazuh-indexer.service
+++ b/stack/indexer/base/files/usr/lib/systemd/system/wazuh-indexer.service
@@ -18,6 +18,7 @@ WorkingDirectory=/usr/share/wazuh-indexer
 
 User=wazuh-indexer
 Group=wazuh-indexer
+UMask=0027
 
 ExecStart=/usr/share/wazuh-indexer/bin/systemd-entrypoint -p ${PID_DIR}/wazuh-indexer.pid --quiet
 
