--- a/debs/SPECS/dns-overwatch/debian/control
+++ b/debs/SPECS/dns-overwatch/debian/control
@@ -9,6 +9,6 @@ Homepage: https://www.wazuh.com
 Package: dns-overwatch
 Architecture: any
 Depends: ${shlibs:Depends}, libc6 (>= 2.7), lsb-release, debconf, adduser
-Conflicts: ossec-hids-agent, wazuh-manager, ossec-hids, wazuh-api
+Conflicts: ossec-hids-agent, wazuh-manager, wazuh-agent, ossec-hids, wazuh-api
 Breaks: ossec-hids-agent, wazuh-manager, ossec-hids
 Description: Wazuh helps you to gain security visibility into your infrastructure by monitoring hosts at an operating system and application level. It provides the following capabilities: log analysis, file integrity monitoring, intrusions detection and policy and compliance monitoring
