--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -40,15 +40,15 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: bump-version-${{ github.event.inputs.version }}
 
-      - name: Import bot's GPG key for signing commits
-        id: import-gpg
-        uses: crazy-max/ghaction-import-gpg@v5
-        with:
-          gpg_private_key: ${{ secrets.WAZUHCI_GPG_PRIVATE_KEY }}
-          passphrase: ${{ secrets.WAZUHCI_GPG_PASSWORD }}
-          git_config_global: true
-          git_user_signingkey: true
-          git_commit_gpgsign: true
+      # - name: Import bot's GPG key for signing commits
+      #   id: import-gpg
+      #   uses: crazy-max/ghaction-import-gpg@v5
+      #   with:
+      #     gpg_private_key: ${{ secrets.WAZUHCI_GPG_PRIVATE_KEY }}
+      #     passphrase: ${{ secrets.WAZUHCI_GPG_PASSWORD }}
+      #     git_config_global: true
+      #     git_user_signingkey: true
+      #     git_commit_gpgsign: true
 
       - name: Check imported keys
         run: |
