--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   bump-version:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -40,22 +40,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: bump-version-${{ github.event.inputs.version }}
 
-      # - name: Import bot's GPG key for signing commits
-      #   id: import-gpg
-      #   uses: crazy-max/ghaction-import-gpg@v5
-      #   with:
-      #     gpg_private_key: ${{ secrets.WAZUHCI_GPG_PRIVATE_KEY }}
-      #     passphrase: ${{ secrets.WAZUHCI_GPG_PASSWORD }}
-      #     git_config_global: true
-      #     git_user_signingkey: true
-      #     git_commit_gpgsign: true
-
-      - name: Check imported keys
-        run: |
-          gpg --list-secret-keys --keyid-format LONG
-          gpg --list-keys --keyid-format LONG
-        shell: bash
-
       - name: Set execution parameters
         run: |
           if [ -n "${{ github.event.inputs.version }}" ]; then
@@ -74,21 +58,22 @@ jobs:
           python3 ./bump_version.py ${{ env.VERSION }} ${{ env.REVISION }} ${{ env.DATE }}
         shell: bash
 
+      # - name: Import GPG key
+      #   id: import_gpg
+      #   uses: crazy-max/ghaction-import-gpg@v5
+      #   with:
+      #     gpg_private_key: ${{ secrets.WAZUHCI_GPG_PRIVATE_KEY }}
+      #     passphrase: ${{ secrets.WAZUHCI_GPG_PASSWORD }}
+      #     git_user_signingkey: true
+      #     git_commit_gpgsign: true
+
       - name: "Commit changes and push"
         run: |
-            echo use-agent >> ~/.gnupg/gpg.conf
-            echo pinentry-mode loopback >> ~/.gnupg/gpg.conf
-            echo allow-loopback-pinentry >> ~/.gnupg/gpg-agent.conf
-            echo "RELOADAGENT" | gpg-connect-agent
             git add .
             git commit -m "Bump version to ${{ github.event.inputs.version }}"
             git push origin bump-version-${{ github.event.inputs.version }}
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIT_AUTHOR_NAME: ${{ steps.import-gpg.outputs.name }}
-          GIT_AUTHOR_EMAIL: ${{ steps.import-gpg.outputs.email }}
-          GIT_COMMITTER_NAME: ${{ steps.import-gpg.outputs.name }}
-          GIT_COMMITTER_EMAIL: ${{ steps.import-gpg.outputs.email }}
         shell: bash
 
       - name: "Create pull request"
