--- a/stack/indexer/deb/debian/rules
+++ b/stack/indexer/deb/debian/rules
@@ -139,7 +139,9 @@ override_dh_fixperms:
 	chown root:root $(TARGET_DIR)/etc/init.d/$(NAME)
 	chown root:root $(TARGET_DIR)$(SYS_DIR)/sysctl.d/$(NAME).conf
 	chown root:root $(TARGET_DIR)$(SYS_DIR)/systemd/system/$(NAME).service
+	chmod 640 $(TARGET_DIR)$(SYS_DIR)/systemd/system/$(NAME).service
 	chown root:root $(TARGET_DIR)$(SYS_DIR)/systemd/system/$(NAME)-performance-analyzer.service
+	chmod 640 $(TARGET_DIR)$(SYS_DIR)/systemd/system/$(NAME)-performance-analyzer.service
 	chmod 640 $(TARGET_DIR)$(SYS_DIR)/tmpfiles.d/$(NAME).conf
 	chown root:root $(TARGET_DIR)$(SYS_DIR)/tmpfiles.d/$(NAME).conf
 	chmod 750 $(TARGET_DIR)$(INSTALLATION_DIR)
