Testing changes in configuration files for stack

--- a/unattended_installer/config/dashboard/dashboard_unattended.yml
+++ b/unattended_installer/config/dashboard/dashboard_unattended.yml
@@ -1,5 +1,5 @@
 server.host: 0.0.0.0
-opensearch.hosts: https://127.0.0.1:9200
+opensearch.hosts: https://localhost:9200
 server.port: 443
 opensearch.ssl.verificationMode: certificate
 # opensearch.username: kibanaserver
