--- a/unattended_installer/config/filebeat/filebeat_all_in_one.yml
+++ b/unattended_installer/config/filebeat/filebeat_all_in_one.yml
@@ -1,6 +1,6 @@
 # Wazuh - Filebeat configuration file
 output.elasticsearch:
-  hosts: ["127.0.0.1:9200"]
+  hosts: ["localhost:9200"]
   protocol: https
   username: ${username}
   password: ${password}
