--- a/wpk/common/Dockerfile
+++ b/wpk/common/Dockerfile
@@ -1,6 +1,7 @@
 FROM debian:9
-
-RUN apt-get update && \
+RUN echo "deb http://archive.debian.org/debian stretch contrib main non-free" > /etc/apt/sources.list && \
+    echo "deb http://archive.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list && \
+    apt-get update && \
     apt-get -y install --allow-change-held-packages python git curl jq python3 python3-pip libffi-dev && \
     pip3 install --upgrade cryptography==2.9.2 awscli
 
