Added verbose option to password tool Actions

--- a/.github/workflows/password-tool.yml
+++ b/.github/workflows/password-tool.yml
@@ -33,7 +33,7 @@ jobs:
           name: scripts
       - name: Install wazuh
         run: |
-          sudo bash wazuh-install.sh -a
+          sudo bash wazuh-install.sh -a -v
       - name: Uncompress wazuh install files 
         run: sudo tar -xvf wazuh-install-files.tar
       - name: Run script
@@ -49,7 +49,7 @@ jobs:
           name: scripts
       - name: Install wazuh
         run: |
-          sudo bash wazuh-install.sh -a
+          sudo bash wazuh-install.sh -a -v
       - name: Uncompress wazuh install files 
         run: sudo tar -xvf wazuh-install-files.tar
       - name: Run script
