Changed REVISION debs name

--- a/.github/workflows/test-install-deb.yml
+++ b/.github/workflows/test-install-deb.yml
@@ -69,7 +69,7 @@ jobs:
         if: steps.changes.outputs.deb_packages == 'true' || (steps.changes.outputs.deb_images_i386 == 'true' && matrix.ARCHITECTURE == 'i386') || (steps.changes.outputs.deb_images_amd64 == 'true' && matrix.ARCHITECTURE == 'amd64')
         run: |
           VERSION=$(cat $GITHUB_WORKSPACE/VERSION)
-          REVISION=$( echo ${{ github.head_ref }})
+          REVISION=$( echo ${{ github.head_ref }} | sed 's/-/./g; s/\//./g' )
           echo "PACKAGE_NAME=wazuh-${{ matrix.type }}_${VERSION}-${REVISION}_${{ matrix.arch }}.deb" >> $GITHUB_ENV
 
       - name: Download the Wazuh ${{ matrix.type }} package for ${{ matrix.system.NAME }}
