--- a/rpms/CentOS/6/x86_64/Dockerfile
+++ b/rpms/CentOS/6/x86_64/Dockerfile
@@ -16,7 +16,7 @@ RUN yum install -y gcc make wget git \
     e2fsprogs-devel libacl-devel libattr-devel \
     openssl-devel libxml2-devel kexec-tools elfutils \
     libarchive-devel elfutils-libelf-devel \
-    elfutils-libelf patchelf elfutils-devel libgcrypt-devel
+    elfutils-libelf patchelf elfutils-devel libgcrypt-devel perl-IPC-Cmd
 
 RUN yum-builddep python34 -y
 
